# MEMORY_P

./: .codeiumignore  .gitignore  AGENTS.md  Cargo.toml  README.md  antigravity_rules.md  check_err.txt  index.html  integrate_trae.ps1  mcp_memory_p.bat  mem.ps1  memory_p.toml  simulation.bend  simulation_runner.jl
.agent/rules/: rulesactive.md
.cargo/: config.toml
.windsurf/rules/: docs-expert.md  efficiency.md  rust.instructions.md
.windsurf/workflows/: crear-doc.md  debug-seguro.md  generar-readme.md  refactor-minimo.md  web-economico.md
PAYLOAD_BANK/ANALYSIS/: analyze_copiloto.json  analyze_copiloto_v2.json  analyze_copiloto_v3.json  analyze_prompts.json  copiloto_result.json  copiloto_v2_result.json  copiloto_v3_result.json  debug_target.json  forensic_search.json  prompts_result.json  refactor_plan.json  research_report.json  search_prompt.json  search_prompt_v2.json  search_result.json  search_result_v2.json  self_analysis.json
PAYLOAD_BANK/WORKFLOWS/: create_v3.json  demo_workflow.json  fix_lib.json  sys_standardize_log.json
docs/: HOWTO_REPAIR.md  REFERENCE_TOOLS.md  TUTORIAL_START.md
src/: accelerator_bridge.rs  analyzer.rs  config.rs  error.rs  main.rs  mcp_api.rs  mega_simulator.rs  parallel_engine.rs  simulation_engine.rs  test_security.rs  workspace.rs
src/mcp/: handlers.rs  mod.rs  models.rs
